Support Lune by moving Roblox specific code into abstracted packages
For this repo, there was just a few Roblox specific cases:

- HttpService:JSONEncode/JSONDecode is abstracted under the `luau-json`
  package
- HttpService:UrlEncode is simply replaced with a string.gsub call
- The task library is loaded differently in Lune, so a tiny package is
  used to branch between the Roblox global and the Lune task library

--- a/modules/collections/package.json
+++ b/modules/collections/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "@jsdotlua/es7-types": "workspace:^",
-    "@jsdotlua/instance-of": "workspace:^"
+    "@jsdotlua/instance-of": "workspace:^",
+    "luau-json": "^0.1.0"
   },
   "devDependencies": {
     "@jsdotlua/number": "workspace:^",
