--- a/modules/timers/package.json
+++ b/modules/timers/package.json
@@ -12,7 +12,8 @@
     "prepare": "npmluau"
   },
   "dependencies": {
-    "@jsdotlua/collections": "workspace:^"
+    "@jsdotlua/collections": "workspace:^",
+    "luau-task": "^1.0.0"
   },
   "devDependencies": {
     "@jsdotlua/jest-globals": "^3.6.1-rc.2",
